--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-python_introduction/google_colab.md
-python_introduction/python_intro2.md		
-python_introduction/python_intro5.md
-python_introduction/python_intro.md		
-python_introduction/python_intro3.md
-python_introduction/python_intro2-2.md	
-python_introduction/python_intro4.md
+google_colab.md
+python_intro2.md		
+python_intro5.md
+python_intro.md		
+python_intro3.md
+python_intro2-2.md	
+python_intro4.md
 
